gitops/01-system/main/argocd/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: management-gateway
    namespace: istio-system
  hostnames:
  - "argocd.jin-server.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80 # Argo CD HTTP service port
